add internationalisation welcome, all tags, login

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -1,4 +1,23 @@
-hotelNamePreffix=Fabulous hotel on the beach
-hotelName=Sunny Zurbagan
-footer=All Rights Reserved
-hello=Hello
+genericpage.hotelNamePreffix=Fabulous hotel on the beach
+genericpage.hotelName=Sunny Zurbagan
+genericpage.footer=All Rights Reserved
+pagination.rowCount=Enter the number of lines per page:
+pagination.addItem=Add item
+pagination.goHome=Go to home page
+pagination.back=Back
+pagination.next=Next
+statusbar.welcome=Welcome, guest!
+statusbar.sign=Sign in
+statusbar.password=Password
+statusbar.login=Login
+accordion.roomDescription=Room description
+accordion.roomTypes=Types of rooms
+accordion.hotelServices=Hotel Services
+accordion.hotelServicesList=Hotel Services List
+login.registrationHref = ref on registration
+login.help=help
+login.pageUpdate=Page Update
+login.badusername=bad username
+login.emptyusername=empty username
+login.badcontext = bad username context
+login.emptycontext = empty username context
