--- a/src/main/resources/i18n/message_en.properties
+++ b/src/main/resources/i18n/message_en.properties
@@ -1,4 +1,63 @@
-hotelNamePreffix=Fabulous hotel on the beach
-hotelName=Sunny Zurbagan
-footer=All Rights Reserved
-hello=Hello
+genericpage.hotelNamePreffix=Fabulous hotel on the beach
+genericpage.hotelName=Sunny Zurbagan
+genericpage.footer=All Rights Reserved
+pagination.rowCount=Enter the number of lines per page\:
+pagination.addItem=Add item
+pagination.goHome=Go to home page
+pagination.back=Back
+pagination.next=Next
+statusbar.welcome=Welcome, guest!
+statusbar.sign=Sign in
+statusbar.password=Password
+statusbar.login=Login
+accordion.roomDescription=<p> Hotel "Zurbagan" located near major transport interchanges of Sochi - Krasnodar rings, so you will not be difficulty to get to any place in Sochi, not only, but also all. The Black Sea coast. In the immediate vicinity of the hotel there is an embankment of the river with the city of the same name. In walking distance to major shopping centers, where among other things, there are restaurants where you can try a variety of dishes countries. Hotel "Zurbagan" offers accommodation in comfortable rooms of different categories, each of which is equipped with everything you need to make your stay in the resort town still pleasant. For car owners in the territory of the hotel there is parking. Not far from the hotel, family-run supermarket "Magnet" and the central dry cleaning. </p>\
+                                              <h5> Rooms</h5>\
+                                              <h6>Double room (Standard, Econom, Deluxe)</h6>\
+                          \
+                                              <p> In the room: double bed (or twin beds), bedside tables, wardrobe, sofa (or chair), dressing table, mirror, chair, TV, phone, fridge, air conditioning (in some rooms). In the bathroom: shower (or bath), toilet, sink. </p>\
+                                              <h6>Single Room (Standard, Econom, Deluxe)</h6>\
+                          \
+                                              <p> This room area bedroom and living room area. In the area of \u200B\u200Bbedroom: double bed, bedside tables, wardrobe, dressing table, mirror, chair. In the living area with a sofa, armchair, coffee table, TV, telephone, refrigerator, air conditioning. In the bathroom: bath, toilet, sink, set towels, personal hygiene products.</p>\
+                                              <h6>Studio Room</h6>\
+                          \
+                                              <p>  This room area bedroom and living room area. In the area of \u200B\u200Bbedroom: double bed, bedside tables, wardrobe, dressing table, mirror, chair. In the living area with a sofa, armchair, coffee table, TV, telephone, refrigerator, air conditioning. In the bathroom: bath, toilet, sink, hairdryer towels, personal hygiene products, slippers.</p>\
+                                              <h6>Deluxe Room</h6>\
+                          \
+                                              <p> In the bedroom and living room. The bedroom has a double bed, bedside tables, wardrobe, phone. In the living room sofa, ottoman, coffee table, desk, dressing table, chair, TV, refrigerator, air conditioning. In the bathroom: bath, toilet, sink, hair dryer, towels, personal hygiene, slippers. </p>\
+                          \
+                                              <h5>Breakfast is included in the room rate.</h5>\
+                                              <h5> Check out time 12.00.</h5>\
+                                              <h5> Children up to 12 years - free of charge.</h5>\
+                                              <h5> Extra bed - 500 rubles.</h5>
+accordion.hotelServices=Hotel Services
+accordion.roomTypes=Types of rooms
+accordion.hotelServicesList=<p> Internet access </ p> \
+\
+<p> Transfer </ p> \
+\
+<p> Air Conditioning </ p> \
+\
+<p> Hairdryer </ p> \
+\
+<p> Parking </ p> \
+\
+<p> Room-service </ p> \
+\
+<p> ironing </ p> \
+\
+<p> Cafe-bar </ p> \
+\
+<p> Bicycle </ p> \
+\
+<p> Tours </ p> \
+\
+<p> Wi-Fi</ p>
+login.registrationHref=registration
+login.help=to get help, click on the link
+login.pageUpdate=Page Update
+login.badusername=You have entered the correct username or password\!
+login.emptyusername=Enter your username and password\!
+login.badcontext=You have entered the correct username or password\! \
+<p>Possible causes\: selected input language is not correct, the CapsLock key down <p>
+login.emptycontext=If you are already registered, enter their Shutterstock username and password\!\
+<p> If you have not registered yet, please register<p>
