--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -21,3 +21,10 @@ login.badusername=bad username
 login.emptyusername=empty username
 login.badcontext = bad username context
 login.emptycontext = empty username context
+registration.title=title
+registration.confirmPassword=Confirm the password
+registration.signUp=Sign Up
+badparol=Bad Parol
+badusername=Bad Username
+registration.congratulations=Congratulations, you have successfully registered!
+empty=empty
