--- a/src/main/resources/i18n/message_en.properties
+++ b/src/main/resources/i18n/message_en.properties
@@ -61,3 +61,10 @@ login.badcontext=You have entered the correct username or password\! \
 <p>Possible causes\: selected input language is not correct, the CapsLock key down <p>
 login.emptycontext=If you are already registered, enter their Shutterstock username and password\!\
 <p> If you have not registered yet, please register<p>
+registration.title=Registration page
+registration.confirmPassword=Confirm the password
+registration.signUp=Sign Up
+registration.congratulations=Congratulations, you have successfully registered\!<p> Ordering click </p> <a href=\"/welcome \">here</a>
+empty=
+badparol=Not correctly confirmed password\!
+badusername=A user with the same name already exists\!
