add internalisation reservation

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -27,4 +27,12 @@ registration.signUp=Sign Up
 badparol=Bad Parol
 badusername=Bad Username
 registration.congratulations=Congratulations, you have successfully registered!
-empty=empty
+reservation.title = reservation title
+reservation.congratulate = You have successfully booked a room!
+reservation.gotomain=to go to the main page, click on the  link
+reservation.gotoaccount = to go to the account page
+reservation.picked = We picked up a room for you!
+reservation.bookingprocedure=To go to the booking procedure, click on the link
+reservation.guestinformation=Enter guest information\:
+reservation.booking=Booking
+
