--- a/src/main/resources/i18n/message_en.properties
+++ b/src/main/resources/i18n/message_en.properties
@@ -65,6 +65,13 @@ registration.title=Registration page
 registration.confirmPassword=Confirm the password
 registration.signUp=Sign Up
 registration.congratulations=Congratulations, you have successfully registered\!<p> Ordering click </p> <a href=\"/welcome \">here</a>
-empty=
 badparol=Not correctly confirmed password\!
 badusername=A user with the same name already exists\!
+reservation.title=Reservation page
+reservation.congratulate=You have successfully booked a room\!
+reservation.gotomain=to go to the main page, click on the <a href\="\#DemoModal2" data-toggle\="modal"> link </a>
+reservation.gotoaccount=To view your orders, to confirm your reservation and to change personal data, click on the link "Your Personal Account"
+reservation.picked=We picked up a room for you\!
+reservation.bookingprocedure=To go to the booking procedure, click on the link
+reservation.guestinformation=Enter guest information\:
+reservation.booking=Reservations
