add internalisation booking,adminform

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -35,4 +35,38 @@ reservation.picked = We picked up a room for you!
 reservation.bookingprocedure=To go to the booking procedure, click on the link
 reservation.guestinformation=Enter guest information\:
 reservation.booking=Booking
+adminform.title=Admin main page
+adminform.gotoboking = Go to booking edit
+adminform.gotoroomedit = Go to room  edit
+adminform.gotocustomer = Go to costomer edit
+adminform.gotouseredit = Go to user data edit
+booking.title = Booking edit page
+booking.datefrom = Check-in date
+booking.dateto= Date Departure
+booking.numberofdays = Number of days
+booking.roomno=Room number
+booking.userId=User ID
+booking.confirmation=Confirmfation
+find=Find
+tableupdate = Update table
+booking.unproccessed=Unprocessed
+booking.aprroved=Approved
+booking.notapproved=Not Approved
+edit = Edit
+isdelete=Delete
+booking.tablename=Booking
+editbutton= Button to edit
+booking.confirmationbutton= Button to confirmation
+deletebutton=Button to delete
+create= Create
+booking.createtitle=Booking create page
+booking.createmessage=Enter reservation details
+update = Update
+booking.updatetitle=Booking update page
+updatemessage =Change the data for updating
+booking.create=Create booking
+welcomelayout.welcome=Welcome
+welcomelayout.gotomain=Back to main page
+
+
 
