--- a/src/main/resources/i18n/message_en.properties
+++ b/src/main/resources/i18n/message_en.properties
@@ -75,3 +75,35 @@ reservation.picked=We picked up a room for you\!
 reservation.bookingprocedure=To go to the booking procedure, click on the link
 reservation.guestinformation=Enter guest information\:
 reservation.booking=Reservations
+adminform.title=Admin main page
+adminform.gotoboking=Editing booking table
+adminform.gotoroomedit=Editing Room
+adminform.gotocustomer=Edit customer data
+adminform.gotouseredit=Editing user accounts
+booking.title=Booking edit page
+booking.datefrom=Check-in date
+booking.dateto=Date Departure
+booking.numberofdays=Number of days
+booking.roomno=Room number
+booking.userId=User ID
+booking.confirmation=Confirmfation
+find=Find
+tableupdate=Update table
+booking.unproccessed=Unprocessed
+booking.aprroved=Approved
+booking.notapproved=Not Approved
+edit=Edit
+isdelete=Delete
+booking.tablename=Booking
+editbutton=Button to edit
+booking.confirmationbutton=Button to confirmation
+deletebutton=Button to delete
+booking.create=Create booking
+booking.createtitle=Booking create page
+booking.createmessage=Enter reservation details
+create=Create
+update=Update
+booking.updatetitle=Booking update page
+updatemessage=Change the data for updating
+welcomelayout.welcome=Welcome
+welcomelayout.gotomain=Back to main page
