internalisation final refactoring

--- a/src/main/resources/i18n/message_en.properties
+++ b/src/main/resources/i18n/message_en.properties
@@ -88,7 +88,7 @@ booking.roomno=Room number
 booking.userId=User ID
 booking.confirmation=Confirmfation
 find=Find
-tableupdate=Update table
+tableupdate=Refresh table
 booking.unproccessed=Unprocessed
 booking.aprroved=Approved
 booking.notapproved=Not Approved
@@ -102,8 +102,58 @@ booking.create=Create booking
 booking.createtitle=Booking create page
 booking.createmessage=Enter reservation details
 create=Create
-update=Update
 booking.updatetitle=Booking update page
 updatemessage=Change the data for updating
 welcomelayout.welcome=Welcome
 welcomelayout.gotomain=Back to main page
+customer.title=Customer Edit Page
+customer.name=First Name
+customer.lastname=Last Name
+customer.city=City
+customer.region=Region
+customer.country=Country
+customer.passport=Passport
+customer.phone=Phone
+customer.email=Email
+customer.prepayment=Prepayment
+customer.userid=User ID
+customer.bookid=Book ID
+customer.tablecaption=Customer Details
+customer.changemessage=Change the client information
+save=Save
+customer.createmessage=Please enter information about the customer
+room.no=Room Number
+room.type=Room Type
+room.bed=Number of bunks
+room.rate=Rate
+room.title=Rooms edit page
+room.list=List of all rooms
+room.changemessage=Change the room information
+room.createmessage=Please enter information about the room
+room.id=room ID
+welcome.title=Welcome page
+welcome.signin=Login to your personal cabinet
+welcome.datefrom=Select the date of arrival
+welcome.dateto=Select date of departure
+welcome.standard=Standard
+welcome.econome=Econom
+welcome.deluxe=Deluxe
+welcome.single=Single
+welcome.double=Double
+welcome.studio=Studio
+welcome.findroom=Find a room
+user.username=Username
+user.password=Password
+user.role=Role
+user.title=User edit page
+user.changemessage=Change the user information
+user.createmessage=Please enter information about the user
+user.list=List of all users
+account.title=Account page
+account.welcome=\ into your personal account\!
+account.orders=Your story reservation
+account.details=Details
+account.editusername=Change username or password
+account.userdata=User information
+account.notnow=Not Now
+account.roomsdata=Information rooms are booked
