language select add

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -117,3 +117,5 @@ account.editusername=Change username or password
 account.userdata=User information
 account.notnow=Not Now
 account.roomsdata=Information rooms are booked
+login.language=Choose language
+login.presentation=presentation
