--- a/src/main/resources/i18n/message_en.properties
+++ b/src/main/resources/i18n/message_en.properties
@@ -10,8 +10,7 @@ statusbar.welcome=Welcome, guest!
 statusbar.sign=Sign in
 statusbar.password=Password
 statusbar.login=Login
-accordion.roomDescription=<p> Hotel "Zurbagan" located near major transport interchanges of Sochi - Krasnodar rings, so you will not be difficulty to get to any place in Sochi, not only, but also all. The Black Sea coast. In the immediate vicinity of the hotel there is an embankment of the river with the city of the same name. In walking distance to major shopping centers, where among other things, there are restaurants where you can try a variety of dishes countries. Hotel "Zurbagan" offers accommodation in comfortable rooms of different categories, each of which is equipped with everything you need to make your stay in the resort town still pleasant. For car owners in the territory of the hotel there is parking. Not far from the hotel, family-run supermarket "Magnet" and the central dry cleaning. </p>\
-                                              <h5> Rooms</h5>\
+accordion.roomDescription= <h5> Rooms</h5>\
                                               <h6>Double room (Standard, Econom, Deluxe)</h6>\
                           \
                                               <p> In the room: double bed (or twin beds), bedside tables, wardrobe, sofa (or chair), dressing table, mirror, chair, TV, phone, fridge, air conditioning (in some rooms). In the bathroom: shower (or bath), toilet, sink. </p>\
@@ -157,3 +156,5 @@ account.editusername=Change username or password
 account.userdata=User information
 account.notnow=Not Now
 account.roomsdata=Information rooms are booked
+login.language=Choose language
+login.presentation=<p> Hotel "Zurbagan" located near major transport interchanges of Sochi - Krasnodar rings, so you will not be difficulty to get to any place in Sochi, not only, but also all. The Black Sea coast. In the immediate vicinity of the hotel there is an embankment of the river with the city of the same name. In walking distance to major shopping centers, where among other things, there are restaurants where you can try a variety of dishes countries. Hotel "Zurbagan" offers accommodation in comfortable rooms of different categories, each of which is equipped with everything you need to make your stay in the resort town still pleasant. For car owners in the territory of the hotel there is parking. Not far from the hotel, family-run supermarket "Magnet" and the central dry cleaning. </p>
