change select language

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -112,10 +112,12 @@ user.list=List of all users
 account.title=Account page
 account.welcome=\ into your personal account\!
 account.orders=Your story reservation
-account.details=Details
+account.detailshide=Details hide
 account.editusername=Change username or password
 account.userdata=User information
 account.notnow=Not Now
 account.roomsdata=Information rooms are booked
 genericpage.language=Choose language
 login.presentation=presentation
+genericpage.changelocal=Select a language
+account.details=Details
