--- a/src/main/resources/i18n/message_en.properties
+++ b/src/main/resources/i18n/message_en.properties
@@ -158,3 +158,5 @@ account.notnow=Not Now
 account.roomsdata=Information rooms are booked
 genericpage.language=Choose language
 login.presentation=<p> Hotel "Zurbagan" located near major transport interchanges of Sochi - Krasnodar rings, so you will not be difficulty to get to any place in Sochi, not only, but also all. The Black Sea coast. In the immediate vicinity of the hotel there is an embankment of the river with the city of the same name. In walking distance to major shopping centers, where among other things, there are restaurants where you can try a variety of dishes countries. Hotel "Zurbagan" offers accommodation in comfortable rooms of different categories, each of which is equipped with everything you need to make your stay in the resort town still pleasant. For car owners in the territory of the hotel there is parking. Not far from the hotel, family-run supermarket "Magnet" and the central dry cleaning. </p>
+genericpage.changelocal=Select a language
+account.detailshide=Details hide
