--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -66,7 +66,7 @@ booking.updatetitle=Booking update page
 updatemessage =Change the data for updating
 booking.create=Create booking
 welcomelayout.welcome=Welcome
-welcomelayout.gotomain=Back to main page
+welcomelayout.gotomain=Exit
 customer.title=Customer Edit Page
 customer.name=First Name
 customer.lastname=Last Name
