--- a/src/main/resources/i18n/message_en.properties
+++ b/src/main/resources/i18n/message_en.properties
@@ -104,7 +104,7 @@ create=Create
 booking.updatetitle=Booking update page
 updatemessage=Change the data for updating
 welcomelayout.welcome=Welcome
-welcomelayout.gotomain=Back to main page
+welcomelayout.gotomain=Exit
 customer.title=Customer Edit Page
 customer.name=First Name
 customer.lastname=Last Name
